--- a/VidCoder/Resources/Translations/CommonRes.pl.resx
+++ b/VidCoder/Resources/Translations/CommonRes.pl.resx
@@ -282,8 +282,8 @@ Pełna kopia licencji GNU General Public została dołączona do tego programu.<
     <comment>Choice to pick the first item in a list, like audio or subtitle tracks.</comment>
   </data>
   <data name="DuplicateTrack" xml:space="preserve">
-    <value>Duplicate this track                  -  Duplikat tej ścieżki.
-Duplicate Track                         -  Duplikat ścieżki.
+    <value>Duplicate this track                  -  Duplikat ścieżki
+Duplicate Track                         -  Duplikat Ścieżki
 
 Tip to duplicate the audio or subtitle track     -  Wskazówka, aby powielić dźwięk lub ścieżkę napisów.</value>
     <comment>Tip to duplicate the audio or subtitle track.</comment>
@@ -305,7 +305,10 @@ or subtitle track.                                - Wskazówka dotycząca przyci
 </value>
     <comment>{0} is the number of selected audio tracks and {1} is the number of total tracks on the source.</comment>
   </data>
-  
+  <data name="SelectedOverTotalSubtitleTracksFormat" xml:space="preserve">
+    <value>{0}/{1} ścieżka napisów</value>
+    <comment>{0} is the number of selected subtitle tracks and {1} is the number of total tracks on the source.</comment>
+  </data>
   <data name="NumberBoxIncreaseButtonAutomationTextFormat" xml:space="preserve">
     <value>Zmień dzień na (późniejszy) - Zmień dzień na ((następny))
                                                        Replace day with ((next))</value>
@@ -321,7 +324,15 @@ Replace the with
     <comment>Automation text for the decrease button on the number box.
 {0} - The name of the value the control is changing, for example "width"</comment>
   </data>
-  
-  
-  
+  <data name="OpenSplitButtonAutomationName" xml:space="preserve">
+    <value>Otwórz przycisk podziału</value>
+    <comment>Automation name for screen readers for the "open" arrow on a split button</comment>
+  </data>
+  <data name="Unknown" xml:space="preserve">
+    <value>Nieznany</value>
+    <comment>Used when a value is not known.</comment>
+  </data>
+  <data name="DefaultLabel" xml:space="preserve">
+    <value>Domyślny:</value>
+  </data>
 </root>
