--- a/VidCoder/Resources/Translations/SubtitleRes.eu.resx
+++ b/VidCoder/Resources/Translations/SubtitleRes.eu.resx
@@ -159,7 +159,9 @@
   <data name="ForeignAudioSearch" xml:space="preserve">
     <value>Beste Hizkuntzako Audio Bilaketa</value>
   </data>
-  
+  <data name="SubtitleFilePickerText" xml:space="preserve">
+    <value>Gehitu azpidatzi agiria</value>
+  </data>
   <data name="SubtitleCharsetDetectionFailedMessage" xml:space="preserve">
     <value>Ezin da azpidatzi agiriaren kodeaketa atzeman. Azpidatziak zuzen erakusten direla zihurtatzeko, gorde berriro agiria UTF-8 bezala.</value>
   </data>
@@ -170,6 +172,10 @@
     <value>{0} kanpokoa</value>
     <comment>{0} is the number of external subtitle tracks included. e.g. "5 external"</comment>
   </data>
-  
-  
+  <data name="ImportSubtitleButton" xml:space="preserve">
+    <value>Inportatu agiritik...</value>
+  </data>
+  <data name="FilePickerDescription" xml:space="preserve">
+    <value>Azpidatzi agiriak</value>
+  </data>
 </root>
