Added ability to edit subtitle and audio track names from the main window. Added ability to preserve subtitle track names from the source video. Fixed screen reader behavior for subtitle lists on main window.

--- a/VidCoder/Resources/MainRes.resx
+++ b/VidCoder/Resources/MainRes.resx
@@ -676,4 +676,16 @@
   <data name="SubtitlePickerButtonToolTip" xml:space="preserve">
     <value>Automatically pick subtitle tracks...</value>
   </data>
+  <data name="AudioSubtitleTrackColumnHeader" xml:space="preserve">
+    <value>Track</value>
+    <comment>Column header for the audio or subtitle track summary. This is an an auto-generated summary that includes language, format, etc.</comment>
+  </data>
+  <data name="AudioTrackNameAutomationName" xml:space="preserve">
+    <value>Audio track name</value>
+    <comment>Narrator label for the audio track name text box.</comment>
+  </data>
+  <data name="SubtitleNameAutomationName" xml:space="preserve">
+    <value>Subtitle name</value>
+    <comment>Narrator label for the subtitle name text box.</comment>
+  </data>
 </root>
