Added new "Recycle" option for "Delete source files when clearing completed items". With this mode, there will be no confirmation dialog, but the source videos will automatically be sent to the Recycle Bin.

--- a/VidCoder/Resources/MainRes.resx
+++ b/VidCoder/Resources/MainRes.resx
@@ -679,4 +679,7 @@
     <value>Subtitle name</value>
     <comment>Narrator label for the subtitle name text box.</comment>
   </data>
+  <data name="CouldNotRecycleFile" xml:space="preserve">
+    <value>Error sending files to Recycle Bin.</value>
+  </data>
 </root>
