--- a/VidCoder/Resources/EnumsRes.resx
+++ b/VidCoder/Resources/EnumsRes.resx
@@ -289,4 +289,10 @@
   <data name="PickerTimeRangeMode_Time" xml:space="preserve">
     <value>Time range</value>
   </data>
+  <data name="DeleteSourceFilesMode_DeleteWithConfirmation" xml:space="preserve">
+    <value>Delete files (with confirmation)</value>
+  </data>
+  <data name="DeleteSourceFilesMode_Recycle" xml:space="preserve">
+    <value>Send to Recycle Bin</value>
+  </data>
 </root>
