--- a/VidCoder/Resources/OptionsRes.resx
+++ b/VidCoder/Resources/OptionsRes.resx
@@ -190,7 +190,7 @@
     <value>Enable LibDVDNav (Change requires program restart. Required to support multiple angles)</value>
   </data>
   <data name="DeleteSourceAfterCompletionCheckBox" xml:space="preserve">
-    <value>Delete source files after clearing successful completed items (with confirmation)</value>
+    <value>Delete source files after clearing successful completed items</value>
   </data>
   <data name="LoggingVerbosityLabel" xml:space="preserve">
     <value>Logging Verbosity:</value>
