Overhauled Destination UI. Added marker to tell when the destination has been manually overridden. Added button to revert naming to automatic when in Manual mode. Added button to change naming options when in Automatic mode. Changed wording to "Destination" in Picker to be consistent with main UI.

--- a/VidCoder/Resources/CommonRes.resx
+++ b/VidCoder/Resources/CommonRes.resx
@@ -330,4 +330,8 @@ A full copy of the GNU General Public License has been included along with this 
   <data name="QueueColumnNameSubtitleTracks" xml:space="preserve">
     <value>Subtitle Tracks</value>
   </data>
+  <data name="Manual" xml:space="preserve">
+    <value>Manual</value>
+    <comment>Shown when something has been set manually</comment>
+  </data>
 </root>
