Removed output file location settings from Global config and moved all of them to the Picker. Output location is specified in only one place now. Added marker to main window to tell if the current output path is being automatically set by the picker or has been manually overridden. When in manual mode, the marker can be clicked to revert to automatic naming. When in automatic mode, clicking it will open the Picker destination settings. Re-styled destination UI on main window to provide bigger hit targets and less button chrome.

--- a/VidCoder/Resources/EnumsRes.resx
+++ b/VidCoder/Resources/EnumsRes.resx
@@ -295,4 +295,13 @@
   <data name="DeleteSourceFilesMode_Recycle" xml:space="preserve">
     <value>Send to Recycle Bin</value>
   </data>
+  <data name="WhenFileExists_AutoRename" xml:space="preserve">
+    <value>Automatically rename</value>
+  </data>
+  <data name="WhenFileExists_Overwrite" xml:space="preserve">
+    <value>Overwrite</value>
+  </data>
+  <data name="WhenFileExists_Prompt" xml:space="preserve">
+    <value>Ask</value>
+  </data>
 </root>
