--- a/VidCoder/Resources/PickerRes.resx
+++ b/VidCoder/Resources/PickerRes.resx
@@ -305,4 +305,21 @@
   <data name="DestinationSection" xml:space="preserve">
     <value>Destination</value>
   </data>
+  <data name="OutputFolder" xml:space="preserve">
+    <value>Output folder:</value>
+    <comment>Label for the output folder.</comment>
+  </data>
+  <data name="UseCustomFileNameFormatCheckBox" xml:space="preserve">
+    <value>Use custom file naming format:</value>
+  </data>
+  <data name="WhenFileExistsBatch" xml:space="preserve">
+    <value>When file already exists (Batch):</value>
+  </data>
+  <data name="WhenFileExistsSingle" xml:space="preserve">
+    <value>When file already exists (Single):</value>
+  </data>
+  <data name="OutputFileNameFormatAutomationName" xml:space="preserve">
+    <value>File name format</value>
+    <comment>Name for screen readers for the output file name format text box</comment>
+  </data>
 </root>
