Added video compare feature. This allows you to quickly switch between the original and encoded videos to evaluate your encoding quality. Right click on a completed item and select "Compare against original". This works on any encode that starts at the beginning of the video, so you can lower the end range to compare smaller test encodes. Fixed issue with main UI not applying output file conflict resolution. Fixed subtitle column reading 0/0 when subtitles are on source but not selected.

--- a/VidCoder/Resources/CommonRes.resx
+++ b/VidCoder/Resources/CommonRes.resx
@@ -334,4 +334,7 @@ A full copy of the GNU General Public License has been included along with this 
     <value>Manual</value>
     <comment>Shown when something has been set manually</comment>
   </data>
+  <data name="FileNoLongerExists" xml:space="preserve">
+    <value>File no longer exists.</value>
+  </data>
 </root>
