Changed spacebar to play/pause video on Compare window. Added Ctrl hotkey to swap between original and encoded.

--- a/VidCoder/Resources/MainRes.resx
+++ b/VidCoder/Resources/MainRes.resx
@@ -696,7 +696,7 @@
     <comment>Label for the original video when comparing original vs encoded</comment>
   </data>
   <data name="CompareWindowHelpText" xml:space="preserve">
-    <value>Click or hold spacebar to show the encoded version.</value>
+    <value>Click or hold Ctrl to show the encoded version.</value>
   </data>
   <data name="CompareWindowTitleFormat" xml:space="preserve">
     <value>Video compare: {0} - {1}</value>
