Fixed wording on picker tooltip

--- a/VidCoder/Resources/PickerRes.resx
+++ b/VidCoder/Resources/PickerRes.resx
@@ -254,7 +254,7 @@
     <value>Last selected</value>
   </data>
   <data name="SubtitleLastSelectedToolTip" xml:space="preserve">
-    <value>Picks the last selected subtitle track if a match is found, otherwise or no tracks.</value>
+    <value>Picks the last selected subtitle track if a match is found, otherwise pick no tracks.</value>
     <comment>Tooltip for the "last selected" option for subtitle picker. This will pick the last selected subtitle track if the track index and language match. Otherwise it will select no tracks.</comment>
   </data>
   <data name="OverrideNameFormatLabel" xml:space="preserve">
