Added proper screen reader labeling for number boxes and dropdowns in Global Options.

--- a/VidCoder/Resources/OptionsRes.resx
+++ b/VidCoder/Resources/OptionsRes.resx
@@ -378,4 +378,7 @@
     <value>Low disk space threshold in gigabytes</value>
     <comment>Screen reader name for the low disk space threshold number box</comment>
   </data>
+  <data name="DragDropScanOrderLabel" xml:space="preserve">
+    <value>Drag and drop scan order:</value>
+  </data>
 </root>
